getting the basics together

--- a/kahils-karaoke/package.json
+++ b/kahils-karaoke/package.json
@@ -4,9 +4,15 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "bulma": "^0.7.4",
     "react": "^16.8.6",
+    "react-bulma-components": "^2.3.0",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "react-p5-wrapper": "0.0.4",
+    "react-router": "^5.0.0",
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "2.1.8",
+    "spotify-web-api-js": "^0.22.1"
   },
   "scripts": {
     "start": "react-scripts start",
