lyrics are rendering and clickable

--- a/kahils-karaoke/.env
+++ b/kahils-karaoke/.env
@@ -12,3 +12,7 @@ REACT_APP_MUSIX_API_KEY=c94224aeccc432de9761bb2dfe69c0ae
 
 clarifai
 285ecc7ca597455dab735ed2df8f95bb
+
+youtube
+REACT_APP_YOUTUBE_API_KEY=AIzaSyCZSy6PkjOKnBsa5K8cdN4y4plA1vunmlE
+
