--- a/kahils-karaoke/package.json
+++ b/kahils-karaoke/package.json
@@ -12,7 +12,8 @@
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
-    "spotify-web-api-js": "^0.22.1"
+    "spotify-web-api-js": "^0.22.1",
+    "youtube-api-v3-search": "^1.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
