--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "bootstrap": "^4.3.1",
     "bulma": "^0.7.4",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.11",
     "react-bulma-components": "^2.3.0",
     "react-dom": "^16.8.6",
     "react-p5-wrapper": "0.0.4",
+    "react-player": "^1.11.2",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
