--- a/package.json
+++ b/package.json
@@ -5,11 +5,16 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
-    "bulma": "^0.7.4",
+    "bulma": "^0.7.5",
+    "bulma-extensions": "^6.2.7",
+    "moment": "^2.24.0",
+    "node-sass-chokidar": "^1.3.5",
+    "npm-run-all": "^4.1.5",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.11",
     "react-bulma-components": "^2.3.0",
     "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.1",
     "react-p5-wrapper": "0.0.4",
     "react-player": "^1.11.2",
     "react-router": "^5.0.0",
@@ -17,6 +22,7 @@
     "react-scripts": "2.1.8",
     "semantic-ui-react": "^0.87.1",
     "spotify-web-api-js": "^0.22.1",
+    "styled-components": "^4.3.2",
     "youtube-api-search": "0.0.5"
   },
   "engines": {
